--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "predeploy": "npm run build",
+    "predeploy": "yarn run build",
     "deploy": "gh-pages main -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
